프론트엔드 2번째 과제 제출(수정1)

--- a/session2/aboutMe.html
+++ b/session2/aboutMe.html
@@ -101,7 +101,7 @@
             />
             <img
               alt="JavaScript"
-              src="https://img.shields.io/badge/JavaScriipt-F7DF1E.svg?&style=for-the-badge&logo=JavaScript&logoColor=black"
+              src="https://img.shields.io/badge/JavaScript-F7DF1E.svg?&style=for-the-badge&logo=JavaScript&logoColor=black"
             />
             <img
               alt="Android"
@@ -110,6 +110,10 @@
             <img
               alt="React"
               src="https://img.shields.io/badge/React-61DAFB.svg?&style=for-the-badge&logo=React&logoColor=white"
+            />
+            <img
+              alt="Spring"
+              src="https://img.shields.io/badge/Spring-6DB33F.svg?&style=for-the-badge&logo=Spring&logoColor=white"
             />
           </section>
 
