--- a/session2/aboutMe.html
+++ b/session2/aboutMe.html
@@ -2,22 +2,21 @@
 <html lang="ko">
 
 <head>
-    le.css" type="application/atom+xml" title="Atom">
     <title>서영</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" , initial-scale=1.0">
-    <link rel="alternate" href="./css/style" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
 
-    <header class="box1">
-        <div class="top">
+    <header id="part">
+        <div>
             <img src="./img/syimg.JPG" alt="정서영 사진" width=155 height=200 />
         </div>
 
-        <div class="top">
-            <div>Jeong Seo Young</div>
+        <div class="info">
+            <div class="name">Jeong Seo Young</div>
             <div>2003.05.02</div>
             <div>디지털소프트웨어공학부</div>
             <div>@mzxxzysy</div>
@@ -26,39 +25,48 @@
         </div>
 
     </header>
+    <hr>
 
-    <section id="sec1">
-        <div>Education</div>
+    <section id="part">
+        <div id="sec1">
+            <div class="cate">Education</div>
 
-        <div>
-            <div>2019-2022</div>
-            <div>창문여자고등학교</div>
+            <div class="edu">
+                <div>2019-2022</div>
+                <div class="sch">창문여자고등학교</div>
+            </div>
+
+            <div class="edu">
+                <div>2023~</div>
+                <div class="sch">덕성여자대학교</div>
+            </div>
         </div>
 
-        <div>
-            <div>2023~</div>
-            <div>덕성여자대학교</div>
+        <div id="sec2">
+            <div class="cate">Activities</div>
+
+            <div class="act">
+                <div>2023</div>
+                <div class="act23">
+                    <div>L.E.T 발표연합동아리</div>
+                    <div>서울시립과학관 에듀서포터즈</div>
+                </div>
+            </div>
+            <!-- 수정 -->
+            <div class="act">
+                <div>2024</div>
+                <div class="act24">
+                    <div>멋쟁이 사자처럼 대학</div>
+                    <div>아이코딩</div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <section id="sec2">
-        <div>Activities</div>
+    <hr>
 
-        <div>
-            <div>2023</div>
-            <div>L.E.T 발표연합동아리</div>
-            <div>서울시립과학관 에듀서포터즈</div>
-        </div>
-
-        <div>
-            <div>2024</div>
-            <div>멋쟁이 사자처럼 대학</div>
-            <div>아이코딩</div>
-        </div>
-    </section>
-
-    <footer>
-        <div>skills</div>
+    <footer id="part">
+        <div class="cate">skills</div>
         <div>...</div>
     </footer>
 </body>
