--- a/session2/aboutMe.html
+++ b/session2/aboutMe.html
@@ -26,12 +26,13 @@
         <img src="img/pinkribbon.png">
       </div>
       <div class="article1_text">
-        <p id="article1_p2">KimJinHyo</p>
-        <p id="article1_p2">2003.02.20</p>
-        <p id="article1_p2">Duksung Women's University</p>
-        <p id="article1_p2">Computer Engineering</p>
-        <P id="article1_p2">@slomomols</P>
-        <P id="article1_p2">kjhyo0220@gmail.com</P>
+        <!-- id는 하나의 요소에 하나만 부여 가능 -> class로 수정함 -->
+        <p class="article1_p2">KimJinHyo</p>
+        <p class="article1_p2">2003.02.20</p>
+        <p class="article1_p2">Duksung Women's University</p>
+        <p class="article1_p2">Computer Engineering</p>
+        <P class="article1_p2">@slomomols</P>
+        <P class="article1_p2">kjhyo0220@gmail.com</P>
       </div>
     </article>
     <br>  
@@ -48,8 +49,9 @@
       </div>
 
       <div class="article2_text">
-        <p id="article2_p2">요즘 날씨와 잘 어울리는 노래</p>
-        <p id="article2_p2">앨범 커버를 누르면 뮤직 비디오로 이동합니다~!</p>
+        <!-- id에서 class로 수정함! -->
+        <p class="article2_p2">요즘 날씨와 잘 어울리는 노래</p>
+        <p class="article2_p2">앨범 커버를 누르면 뮤직 비디오로 이동합니다~!</p>
       </div>
     </article>
 
@@ -58,7 +60,7 @@
 
     <article>
       <p class="article3_p1"><b>SNS</b></p>
-      <p id="article3_p2">글씨를 클릭하면 링크로 연결됩니다</p>
+      <p class="article3_p2">글씨를 클릭하면 링크로 연결됩니다</p>
 
       <div class="article3">
         <div class="article3_photo">
