[240330]에브리타임 만들기

--- a/session2/aboutMe.html
+++ b/session2/aboutMe.html
@@ -10,32 +10,61 @@
 
 <body>
     <div class="aside">
-        <p id="name1">M I N J U</p>
-        <p id="name2">P A R K</p>
-        <img src="img/프로필.gif" height="100" width="100" alt="인사하는 곰" id="manggom">
+        <div class="profile">
+            <p id="minju">M I N J U</p>
+            <p id="park">P A R K</p>
+            <img src="img/프로필.gif" height="180" width="180" alt="인사하는 곰" id="manggom">
+            <nav class="sns_email">
+                <a href="https://www.instagram.com/rusdgkx/">인스타그램</a>
+                <a href="https://everytime.kr/@G906CuHtjhUfu6cPichb">시간표</a>
+            </nav>
+        </div>
     </div>
     <div class="content">
         <div>
-            <h3 class="subtitle">소속</h3>
-            <hr>
-            <p id="a">디지털소프트웨어공학부 23학번</p>
+            <h3 class="content_title">소속</h3>
+            <p class="content_text">디지털소프트웨어공학부 23학번</p>
         </div>
         <div>
-            <h3 class="subtitle">생년월일</h3>
-            <hr>
-            <p id="b">04.09.17</p>
+            <h3 class="content_title">생년월일</h3>
+            <p class="content_text">04.09.17</p>
         </div>
         <div>
-            <h3 class="subtitle">MBTI</h3>
-            <hr>
-            <p id="c">ISTP</p>
+            <h3 class="content_title">MBTI</h3>
+            <p class="content_text">ISTP</p>
         </div>
         <div>
-            <h3 class="subtitle">좋아하는 것</h3>
-            <hr>
-            <div class="love">
-                <a href="https://naver.me/FLBKsi4n"><img src="img/빵.png" alt="식빵 그림" height="20" width="20"></a>
-                <a href="https://kko.to/aQ2_7uy-sl"><img src="img/음악.png" alt="음표 그림" height="20" width="20"></a>
+            <h3 class="content_title">좋아하는 것</h3>
+            <div class="content_text love">
+                <div>
+                    <a href="https://naver.me/FLBKsi4n"><img src="img/빵.png" alt="식빵 그림" height="50" width="50"></a>
+                    <p>빵</p>
+                </div>
+                <div>
+                    <a href="https://kko.to/aQ2_7uy-sl"><img src="img/음악.png" alt="음표 그림" height="50" width="50"></a>
+                    <p>음악</p>
+                </div>
+                <div>
+                    <a
+                        href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&ssc=tab.nx.all&query=%EC%8A%A4%ED%83%80%EB%93%80%EB%B0%B8%EB%A6%AC&oquery=%EA%B2%8C%EC%9E%84%EC%BD%98%EC%86%94&tqi=ilkA1wpzLi0ssahcTd8ssssssBd-294767"><img
+                            src="img/게임.png" alt="게임콘솔 그림" height="50" width="50"></a>
+                    <p>게임</p>
+                </div>
+                <div>
+                    <a
+                        href="https://map.naver.com/p/entry/place/1946968711?lng=127.0725998&lat=37.2518145&placePath=%2Fhome&entry=plt&searchType=place&c=15.00,0,0,0,dh"><img
+                            src="img/샤브샤브.png" alt="샤브샤브 그림" height="40" width="40"></a>
+                    <p>샤브샤브</p>
+                </div>
+                <div>
+                    <a href="https://www.instagram.com/wittycutie._.dubu/"><img src="img/강아지.png" alt="강아지 그림"
+                            height="50" width="50"></a>
+                    <p>강아지</p>
+                </div>
+                <div>
+                    <a href=""><img src="img/스마일.png" alt="스마일 그림" height="40" width="40"></a>
+                    <p>찾는 중..</p>
+                </div>
             </div>
         </div>
     </div>
