--- a/everytime/main.html
+++ b/everytime/main.html
@@ -25,8 +25,8 @@
         </ul>
       </div>
       <div id="account">
-        <img src="img/chat.png" />
-        <img src="img/person.png" />
+        <img src="img/chat.png" alt="chat"/>
+        <img src="img/person.png" alt="person"/>
       </div>
     </header>
 
