--- a/session2/aboutMe.html
+++ b/session2/aboutMe.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>자기소개</title>
-
-    <link rel="stylesheet" href="./css/#style.css" />
+    <link href="./css/style.css" rel="stylesheet" />
   </head>
+
   <body>
     <aside class="aside">
       <h1 class="subject">Introduce</h1>
@@ -42,37 +42,5 @@
         <p>12기 아기사자</p>
       </div>
     </div>
-
-    <style>
-      .all {
-        padding: 30px;
-        text-align: left;
-        font-size: 0.5rem;
-        color: rgb(93, 83, 69);
-      }
-      .subject {
-        color: rgb(85, 52, 18);
-        border-radius: 5px;
-      }
-      .image {
-        margin-top: 20px;
-        margin-left: 30px;
-        margin-right: 30px;
-      }
-      .subtitle {
-        margin-left: 200px;
-      }
-
-      .aside {
-        border-radius: 10px;
-        width: 200px;
-        height: 400px;
-        background-color: rgb(255, 247, 236);
-        float: left;
-      }
-      .line {
-        border-top: 2px solid rgb(85, 52, 18);
-      }
-    </style>
   </body>
 </html>
