--- a/everytime_second/login.html
+++ b/everytime_second/login.html
@@ -15,9 +15,9 @@
     <!-- input type 보기-->
     <form>
       <div class="clik">
-        <input type="text" placeholder="LIKELION12" class="idbox"></input>
-        <input type="password" placeholder="비밀번호" class="passwordbox"></input>
-        <input type="submit" value="에브리타임 로그인" class="signupbox">
+        <input type="text" placeholder="LIKELION12" class="idbox" />
+        <input type="password" placeholder="비밀번호" class="passwordbox" />
+        <input type="submit" value="에브리타임 로그인" class="signupbox" />
       </div>
       <!--회원가입-->
       <p class="signup"><a href="./signup.html">회원가입</a></p>
