--- a/everytime_second/post.html
+++ b/everytime_second/post.html
@@ -8,40 +8,40 @@
   </head>
   <body>
     <form>
-    <div class="headtxt">
-        <input type="text" class="sorry_1"></input>
-    </div>
-
-    <div class="bodytxt">
-        <input type="text" class="sorry_2"></input>
-    </div>
-
-    <div class="img_post">
-      <img
-        class="shrap"
-        src="./img/container.articles.write.hashtag.png"
-        alt="사진 로딩 중"
-      />
-      <img
-        class="clip"
-        src="./img/container.articles.write.attach.png"
-        alt="사진 로딩 중"
-      />
-      <div class="checkboxandtext">
-        <input type="checkbox" class="checkbox_1" />
-        <span class="secret_1">질문</span>
-        <input type="checkbox" class="checkbox_2" />
-        <span class="secret_2">익명</span>
+      <div class="headtxt">
+        <input type="text" class="sorry_1" />
       </div>
 
-      <div class="write">
+      <div class="bodytxt">
+        <input type="text" class="sorry_2" />
+      </div>
+
+      <div class="img_post">
         <img
-          class="write"
-          src="./img/container.articles.write.submit.png"
+          class="shrap"
+          src="./img/container.articles.write.hashtag.png"
           alt="사진 로딩 중"
         />
+        <img
+          class="clip"
+          src="./img/container.articles.write.attach.png"
+          alt="사진 로딩 중"
+        />
+        <div class="checkboxandtext">
+          <input type="checkbox" class="checkbox_1" />
+          <span class="secret_1">질문</span>
+          <input type="checkbox" class="checkbox_2" />
+          <span class="secret_2">익명</span>
+        </div>
+
+        <div class="write">
+          <img
+            class="write"
+            src="./img/container.articles.write.submit.png"
+            alt="사진 로딩 중"
+          />
+        </div>
       </div>
-    </div>
-</form>
+    </form>
   </body>
 </html>
