--- a/everytime_second/signup.html
+++ b/everytime_second/signup.html
@@ -19,23 +19,39 @@
       </div>
       <!--이름등이랑 박스들-->
       <form>
-      <div class="boxes">
-        <p class="grayfont">이름</p>
-        <input type="text" placeholder="이름을 입력하세요." class="graybox"></input>
-        <p class="grayfont">닉네임</p>
-        <input type="text" placeholder="닉네임을 입력하세요." class="graybox"></input>
-        <p class="grayfont">이메일</p>
-        <input type="email" placeholder="이메일을 입력하세요." class="graybox"></input>
-        <p class="grayfont">비밀번호</p>
-        <input type="password" placeholder="숫자/문자 조합, 최소 8자 이상" class="graybox"></input>
-        <p class="grayfont">비밀번호 재입력</p>
-        <input type="password" placeholder="비밀번호를 재입력하세요." class="graybox"></input>
-      </div>
-      <!--회원가입 박스-->
-      <div class="postbox_box">
-        <input type="submit" value="회원가입" class="postbox">
-      </div>
-    </form>
+        <div class="boxes">
+          <p class="grayfont">이름</p>
+          <input type="text" placeholder="이름을 입력하세요." class="graybox" />
+          <p class="grayfont">닉네임</p>
+          <input
+            type="text"
+            placeholder="닉네임을 입력하세요."
+            class="graybox"
+          />
+          <p class="grayfont">이메일</p>
+          <input
+            type="email"
+            placeholder="이메일을 입력하세요."
+            class="graybox"
+          />
+          <p class="grayfont">비밀번호</p>
+          <input
+            type="password"
+            placeholder="숫자/문자 조합, 최소 8자 이상"
+            class="graybox"
+          />
+          <p class="grayfont">비밀번호 재입력</p>
+          <input
+            type="password"
+            placeholder="비밀번호를 재입력하세요."
+            class="graybox"
+          />
+        </div>
+        <!--회원가입 박스-->
+        <div class="postbox_box">
+          <input type="submit" value="회원가입" class="postbox" />
+        </div>
+      </form>
     </div>
   </body>
 </html>
