[0331] 자기소개 페이지

--- a/session2/aboutMe.html
+++ b/session2/aboutMe.html
@@ -9,73 +9,70 @@
   <body>
     <header class="header">
       <p class="lionlogo">
-        <img width="30%" alt="덕성멋사 로고" src="img/dswu_likelion_logo.png" />
+        <img alt="덕성멋사 로고" src="img/dswu_likelion_logo.png" />
         멋쟁이 사자처럼
       </p>
     </header>
-    <section class="secBox">
-      <section id="sec1">
-        <div class="profile">
-          <img width="30%" alt="프로필사진" src="img/minji.jpeg" />
-          <div class="info">
-            Info
-            <div id="name">김민지</div>
-            <div id="adress">본가: 경기도 용인</div>
-            <div id="home">현재 거주: 후문쪽에서 자취</div>
-            <div id="mbti">MBTI: ENFP</div>
+    <section id="sec1">
+      <div class="profile">
+        <img alt="프로필사진" src="img/minji.jpeg" />
+        <div class="info">
+          Info
+          <div id="name">김민지</div>
+          <div id="adress">본가: 경기도 용인</div>
+          <div id="home">현재 거주: 후문쪽에서 자취</div>
+          <div id="mbti">MBTI: ENFP</div>
+        </div>
+      </div>
+      <div class="interest">
+        Interest
+        <div class="hobbies">
+          <div id="choonsik">
+            <img alt="춘식이" src="img/choonsik.jpg" />
+            카카오프렌즈를 정말 좋아합니다. 모두 좋아하지만 그 중에서도 춘식이가
+            제 최애입니다!
+          </div>
+          <div id="diary">
+            <img alt="다꾸" src="img/diary.jpg" />
+            다꾸용품, 문구류 쇼핑을 좋아하고 모읍니다. 귀여운건 세상을 구해요..
+          </div>
+          <div id="amasvin">
+            <img alt="아마스빈" src="img/amasvin.jpg" />
+            학교 앞 아마스빈에서 알바를 오래했습니다. 버블티를 좋아해서 저에게
+            최고의 직장이에요!
+          </div>
+          <div id="book">
+            <img alt="김동식소설" src="img/dongsik.jpg" />
+            책 읽는걸 좋아해요! 김동식 작가님의 단편집을 정말 좋아하고 요즘은
+            다양하게 읽어보고 있어요.
           </div>
         </div>
-        <div class="interest">
-          Interest
-          <div class="hobbies">
-            <div id="choonsik">
-              <img width="10%" alt="춘식이" src="img/choonsik.jpg" />
-              카카오프렌즈를 정말 좋아합니다. 모두 좋아하지만 그 중에서도
-              춘식이가 제 최애입니다!
-            </div>
-            <div id="diary">
-              <img width="30%" alt="춘식이" src="img/diary.jpg" />
-              다꾸용품, 문구류 쇼핑을 좋아하고 모읍니다. 귀여운건 세상을
-              구해요..
-            </div>
-            <div id="amasvin">
-              <img width="30%" alt="춘식이" src="img/amasvin.jpg" />
-              학교 앞 아마스빈에서 알바를 오래했습니다. 버블티를 좋아해서 저에게
-              최고의 직장이에요!
-            </div>
-            <div id="book">
-              <img width="30%" alt="춘식이" src="img/dongsik.jpg" />
-              책 읽는걸 좋아해요! 김동식 작가님의 단편집을 정말 좋아하고 요즘은
-              다양하게 읽어보고 있어요.
-            </div>
+      </div>
+      <div class="active">
+        Active
+        <div class="list">
+          <div id="highschool"><span>2022.02</span>보라고등학교 졸업</div>
+          <div id="university">
+            <span>2022.03</span>덕성여자대학교 과학기술대학 입학
+          </div>
+          <div id="group"><span>2022.03</span>연합 교육봉사 동아리 입단</div>
+          <div id="council">
+            <span>2022.04</span>과학기술대학 학생회 '여명' 기획국원
+          </div>
+          <div id="group">
+            <span>2023.02</span>연합 교육봉사 동아리 임원진 홍보팀장
+          </div>
+          <div id="council">
+            <span>2023.03</span>IT미디어공학전공 학생회 'MoA' 홍보국원
+          </div>
+          <div id="council">
+            <span>2024.02</span>IT미디어공학전공 학생회 'PLAY' 홍보국장
+          </div>
+          <div id="group">
+            <span>2024.03</span>멋쟁이 사자처럼 대학 아기사자
           </div>
         </div>
-        <div class="active">
-          Active
-          <div class="list">
-            <div id="highschool"><span>2022.02</span>보라고등학교 졸업</div>
-            <div id="university">
-              <span>2022.03</span>덕성여자대학교 과학기술대학 입학
-            </div>
-            <div id="group"><span>2022.03</span>연합 교육봉사 동아리 입단</div>
-            <div id="council">
-              <span>2022.04</span>과학기술대학 학생회 '여명' 기획국원
-            </div>
-            <div id="group">
-              <span>2023.02</span>연합 교육봉사 동아리 임원진 홍보팀장
-            </div>
-            <div id="council">
-              <span>2023.03</span>IT미디어공학전공 학생회 'MoA' 홍보국원
-            </div>
-            <div id="council">
-              <span>2024.02</span>IT미디어공학전공 학생회 'PLAY' 홍보국장
-            </div>
-            <div id="group">
-              <span>2024.03</span>멋쟁이 사자처럼 대학 아기사자
-            </div>
-          </div>
-        </div>
-      </section>
+      </div>
     </section>
     <aside class="aside"></aside>
     <footer class="footer">
