자기소개 페이지 만들기

--- a/session2/aboutMe.html
+++ b/session2/aboutMe.html
@@ -9,13 +9,12 @@
   </head>
 
   <body>
-    <header>
-      <br><br>
-      <img class="circle" src="img/IMG_5845.png" alt="myimg" />
+    <header style="background-color: #333; color: white; text-align: center; padding: 20px;">
+      <img class="circle" src="img/IMG_5845.png" alt="myimg" style="border: 5px solid white;">
       <h1>Choi Yunyeong</h1>
     </header>
 
-    <section>
+    <section style="padding: 20px;">
       <article>
         <p>2003.05.09</p>
         <p>소프트웨어 전공</p>
@@ -25,17 +24,19 @@
       </article>
     </section>
 
-    <article>
-      <hr><br>
-      <h2>LIKETHIS</h2><br>
+    <article style=" background-color: skyblue;">
+      <hr>
+      <h2 >LIKETHIS</h2>
       <ul>
-        <h3>Listening to Music  </h3>
-        <p>저는 음악 듣는 걸 정말 좋아해요 걸을 때나 이동할 때나 항상 이어폰을 달고 산답니다 !</p>
-        <p>한 곡에 꽂히면 주구장창 무한반복하는 저이기에 외힙, R&B, J-POP, 밴드음악, 인디 등 장르를 가리지 않아요</p>
-        <p>하지만 그 중에서 가장 사랑하는 장르는 바로 R&B와 얼터너티브 입니다🎶</p> 
-        <p>제가 사랑하는 아티스트를 조금 이야기해보자면,, LANY, THE1975, SZA, Mac Miller 등,, </p>
-        <p>저와 음악 취향이 겹치신다면 플레이리스트도 공유하고 신나게 이야기 해보아요 ~</p>
-        <br><br>
+
+          <h3>Listening to Music  </h3>
+          <p>저는 음악 듣는 걸 정말 좋아해요 걸을 때나 이동할 때나 항상 이어폰을 달고 산답니다 !</p>
+          <p>한 곡에 꽂히면 주구장창 무한반복하는 저이기에 외힙, R&B, J-POP, 밴드음악, 인디 등 장르를 가리지 않아요</p>
+          <p>하지만 그 중에서 가장 사랑하는 장르는 바로 R&B와 얼터너티브 입니다🎶</p> 
+          <p>제가 사랑하는 아티스트를 조금 이야기해보자면,, LANY, THE1975, SZA, Mac Miller 등,, </p>
+          <p>저와 음악 취향이 겹치신다면 플레이리스트도 공유하고 신나게 이야기 해보아요 ~</p>
+          <br><br>
+
         <h3>Transcription</h3>
         <p>전 책을 읽고 나의 생각과 느낀 점을 정리하는 것을 좋아해요. 그리고 기억에 남는 문장을 그대로 따라 적는 걸 좋아해요.</p> 
         <p>어느 책이든 읽는 시점에 따라 다르게 와닿더라고요. </p>
@@ -109,7 +110,7 @@
     </article>
 
 
-    <footer>
+    <footer style="background-color: #333; color: white; text-align: center; padding: 20px;">
       <br>
       <p>Reference | Pinterest, YouTube</p>
     </footer>
