자기소개 페이지 디벨롭

--- a/session2_01/0aboutMe.html
+++ b/session2_01/0aboutMe.html
@@ -1,31 +1,40 @@
-<!--https://github.com/2024-LIKELION-DS/FE_hw 포크하기-->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>박서현 자기소개</title>
-    <link href="./css/style.css" type="text/css" rel="stylesheet" />
+    <link href="./css/0style.css" rel="stylesheet" />
     <link rel="icon" href="./img/favicon.png" />
   </head>
 
   <body>
     <img class="background" src="./img/background.png" />
-    <a href="./1introduce.html"
-      ><img
-        class="folder"
-        src="./img/folder.png"
-        style="top: 250px; left: 450px"
-    /></a>
-    <div class="name">박서현</div>
-    <div class="foldername" style="top: 360px; left: 490px">박서현</div>
-    <a href="./2hobby.html"
-      ><img
-        class="folder"
-        src="./img/folder.png"
-        style="top: 250px; left: 630px"
-    /></a>
-    <div class="foldername" style="top: 360px; left: 680px">취미</div>
+    <div class="folder" style="overflow: hidden">
+      <div class="folder1">
+        <a href="./1introduce.html"
+          ><img class="folderimg" src="./img/folder.png" style="margin: 10px"
+        /></a>
+        <div class="foldername" style="top: -90px; left: -350px">자기소개</div>
+      </div>
+      <div class="folder2">
+        <a href="./2hobby.html"
+          ><img class="folderimg" src="./img/folder.png" style="margin: 10px"
+        /></a>
+        <div class="foldername" style="top: 125px">다이어리</div>
+      </div>
+      <div class="folder3">
+        <a href="./3game.html"
+          ><img class="folderimg" src="./img/folder.png" style="margin: 10px"
+        /></a>
+        <div class="foldername" style="top: 125px">게임</div>
+      </div>
+      <div class="folder4">
+        <a href="./4music.html"
+          ><img class="folderimg" src="./img/folder.png" style="margin: 10px"
+        /></a>
+        <div class="foldername" style="top: 125px">노래</div>
+      </div>
+    </div>
   </body>
 </html>
