--- a/session2_01/1introduce.html
+++ b/session2_01/1introduce.html
@@ -1,17 +1,17 @@
-<!--https://github.com/2024-LIKELION-DS/FE_hw 포크하기-->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>박서현 자기소개</title>
-    <link href="./css/style.css" type="text/css" rel="stylesheet" />
+    <link href="./css/1style.css" type="text/css" rel="stylesheet" />
     <link rel="icon" href="./img/favicon.png" />
   </head>
 
   <body>
+    <img class="background" src="./img/background.png" />
     <div class="intro">
+      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
       <h2>박서현</h2>
       <img class="profile" src="./img/박서현.jpg" alt="박서현" />
       <li>파트: 프론트엔드</li>
@@ -25,6 +25,4 @@
     </div>
     <br />
   </body>
-
-  <footer>[2024년 2차 세션] 프론트엔드 자기소개 페이지 과제</footer>
 </html>
