[0331] 에브리타임 페이지

--- a/everytime/main.html
+++ b/everytime/main.html
@@ -245,16 +245,16 @@
               &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;더 보기
             </div>
             <div class="contents">
-              우와 커피차 우리가 3위야
+              우와 커피차 우리가 3위
+              <div class="time">15분전</div>
             </div>
             <div class="contents">
-              우와 커피차 우리가 3위야
+              모찌네타코야끼.. 최고의 타코야끼.. ...
+              <div class="time">03/09 16:16</div>
             </div>
             <div class="contents">
-              우와 커피차 우리가 3위야
-            </div>
-            <div class="contents">
-              우와 커피차 우리가 3위야
+              술에 관대한 문화 너무 싫어
+              <div class="time">03/09 20:33</div>
             </div>
           </div>
         </div>
