--- a/session2/aboutMe.html
+++ b/session2/aboutMe.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header id="part">
+    <header class="part">
         <div>
             <img src="./img/syimg.JPG" alt="정서영 사진" width=155 height=200 />
         </div>
@@ -27,26 +27,28 @@
     </header>
     <hr>
 
-    <section id="part">
-        <div id="sec1">
-            <div class="cate">Education</div>
+    <section class="part">
+        <div class="sec1">
+            <div class="cate_edu">Education</div>
 
             <div class="edu">
-                <div>2019-2022</div>
-                <div class="sch">창문여자고등학교</div>
-            </div>
+                <div class="edu1">
+                    <div>2019-2022</div>
+                    <div class="sch">창문여자고등학교</div>
+                </div>
 
-            <div class="edu">
-                <div>2023~</div>
-                <div class="sch">덕성여자대학교</div>
+                <div class="edu2">
+                    <div>2023~</div>
+                    <div class="sch">덕성여자대학교</div>
+                </div>
             </div>
         </div>
 
-        <div id="sec2">
-            <div class="cate">Activities</div>
+        <div class="sec2">
+            <div class="cate_act">Activities</div>
 
             <div class="act">
-                <div>2023</div>
+                <div class="act_year">2023</div>
                 <div class="act23">
                     <div>L.E.T 발표연합동아리</div>
                     <div>서울시립과학관 에듀서포터즈</div>
@@ -54,7 +56,7 @@
             </div>
             <!-- 수정 -->
             <div class="act">
-                <div>2024</div>
+                <div class="act_year">2024</div>
                 <div class="act24">
                     <div>멋쟁이 사자처럼 대학</div>
                     <div>아이코딩</div>
@@ -65,9 +67,18 @@
 
     <hr>
 
-    <footer id="part">
-        <div class="cate">skills</div>
-        <div>...</div>
+    <footer class="part">
+        <div class="cate_ski">TMI</div>
+        <br>
+        <div>
+            <div>- 다정한 사람에게 잘 반하는 st..💗</div>
+            <br>
+            <div>- 축구 k리그 fc서울 팬입니다!🧡🖤</div>
+            <pre>- 한가하게 쉬는 걸 너무 좋아해서
+  일을 벌려놓고 열심히 활동합니다!!
+  스불재로 매일같이 힘들어해요😅
+            </pre>
+        </div>
     </footer>
 </body>
 
