[0402] 에브리타임 만들기  수정

--- a/everytime/main.html
+++ b/everytime/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>덕성여대 에브리타임</title>
 </head>
 
@@ -133,20 +133,119 @@
                     <div class="sec_letter_content">
                         <div class="lettitle">이거 답이 뭐임?</div>
                         <div class="letcontent">닝닝하고 지젤만 정답인줄 알았늗데 아니야??</div>
+                        <div class="interest">
+                            <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 44 </div>
+                            <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 1 </div>
+                            <div class="letinfo"> &nbsp&nbsp | 방금 | 익명</div>
+                        </div>
+
+                    </div>
+                    <div class="prevsc">
+                        <img src="./img/capturescreen.png" width=70 height=90>
+                    </div>
+                </div>
+                <div class="sec_letter">
+                    <div class="sec_letter_content">
+                        <div class="lettitle">이거 답이 뭐임?</div>
+                        <div class="letcontent">닝닝하고 지젤만 정답인줄 알았늗데 아니야??</div>
+                        <div class="interest">
+                            <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 44 </div>
+                            <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 1 </div>
+                            <div class="letinfo"> &nbsp&nbsp | 방금 | 익명</div>
+                        </div>
+
+                    </div>
+                    <div class="prevsc">
+                        <img src="./img/capturescreen.png" width=70 height=90>
+                    </div>
+                </div>
+                <div class="sec_letter">
+                    <div class="sec_letter_content">
+                        <div class="lettitle">이거 답이 뭐임?</div>
+                        <div class="letcontent">닝닝하고 지젤만 정답인줄 알았늗데 아니야??</div>
+                        <div class="interest">
+                            <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 44 </div>
+                            <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 1 </div>
+                            <div class="letinfo"> &nbsp&nbsp | 방금 | 익명</div>
+                        </div>
+
+                    </div>
+                    <div class="prevsc">
+                        <img src="./img/capturescreen.png" width=70 height=90>
+                    </div>
+                </div>
+                <div class="sec_letter">
+                    <div class="sec_letter_content">
+                        <div class="lettitle">이거 답이 뭐임?</div>
+                        <div class="letcontent">닝닝하고 지젤만 정답인줄 알았늗데 아니야??</div>
+                        <div class="interest">
+                            <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 44 </div>
+                            <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 1 </div>
+                            <div class="letinfo"> &nbsp&nbsp | 방금 | 익명</div>
+                        </div>
+
+                    </div>
+                    <div class="prevsc">
+                        <img src="./img/capturescreen.png" width=70 height=90>
+                    </div>
+                </div>
+                <div class="sec_letter">
+                    <div class="sec_letter_content">
+                        <div class="lettitle">이거 답이 뭐임?</div>
+                        <div class="letcontent">닝닝하고 지젤만 정답인줄 알았늗데 아니야??</div>
+                        <div class="interest">
+                            <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 44 </div>
+                            <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 1 </div>
+                            <div class="letinfo"> &nbsp&nbsp | 방금 | 익명</div>
+                        </div>
+
+                    </div>
+                    <div class="prevsc">
+                        <img src="./img/capturescreen.png" width=70 height=90>
+                    </div>
+                </div>
+                <div class="sec_letter">
+                    <div class="sec_letter_content">
+                        <div class="lettitle">이거 답이 뭐임?</div>
+                        <div class="letcontent">닝닝하고 지젤만 정답인줄 알았늗데 아니야??</div>
+                        <div class="interest">
+                            <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 44 </div>
+                            <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 1 </div>
+                            <div class="letinfo"> &nbsp&nbsp | 방금 | 익명</div>
+                        </div>
+
+                    </div>
+                    <div class="prevsc">
+                        <img src="./img/capturescreen.png" width=70 height=90>
+                    </div>
+                </div>
+
+
+                <div class="sec_letter">
+                    <div class="sec_letter_content">
+                        <div class="lettitle">다들 회전초밥 최대 몇 접시 먹어봄</div>
+                        <div class="letcontent">닝닝하고 지젤만 정답인줄 알았늗데 아니야??</div>
                         <div class="letinfo">방금 | 익명</div>
                     </div>
+                </div>
+
+                <div class="downfunc">
+                    <form class="search_func">
+                        <select>
+                            <option selected>전체</option>
+                            <option>해시태그</option>
+                            <option>글 제목</option>
+                            <option>글 내용</option>
+                        </select>
+                        <input type="search" placeholder="검색어를 입력하세요.">
+                        <img src="./img/search.png" width=10 height=10>
+                    </form>
+
                     <div>
-                        <img src="./img/capturescreen.png" width=80 height=100>
+                        <div class="next"> 다음 ></div>
                     </div>
                 </div>
-            </div>
-            <div class="sec_letter">
-                <div class="sec_letter_content">
-                    <div class="lettitle">다들 회전초밥 최대 몇 접시 먹어봄</div>
-                    <div class="letcontent">닝닝하고 지젤만 정답인줄 알았늗데 아니야??</div>
-                    <div class="letinfo">방금 | 익명</div>
-                </div>
-            </div>
+
         </section>
 
         <aside>
@@ -158,10 +257,12 @@
                     사진은 맨날 나한테 밥달라고 쳐다보는 애
                 </div>
 
-                <div class="interest">
+                <div class="infointerest">
                     <div class="popboardcate">비밀게시판</div>
-                    <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 71 </div>
-                    <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 39 </div>
+                    <div class="interest">
+                        <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 71 </div>
+                        <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 39 </div>
+                    </div>
                 </div>
             </div>
             <div class="popletter">
@@ -170,10 +271,12 @@
                     어제 cgv 파묘 9500 3인 대리예매해주신 서ㅇㅇ님 찾아요<br>
                     3월 9일 영화를 예매했는데 같이 구입한 콤보 쿠폰 유효기
                 </div>
-                <div class="interest">
+                <div class="infointerest">
                     <div class="popboardcate">비밀게시판</div>
-                    <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 44 </div>
-                    <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 1 </div>
+                    <div class="interest">
+                        <div class="good"><img class="goodimg" src="./img/good.png" alt="좋아요"> 44 </div>
+                        <div class="comment"><img class="comimg" src="./img/comment.png" alt="댓글"> 1 </div>
+                    </div>
                 </div>
             </div>
 
@@ -199,6 +302,23 @@
 
         </aside>
     </div>
+
+    <footer>
+
+
+        <div class="extrainfo">
+            <div>이용약관</div>
+            <div class="boldlet">개인정보처리방침</div>
+            <div>청소년보호정책</div>
+            <div>커뮤니티이용규칙</div>
+            <div>공지사항</div>
+            <div>문의하기</div>
+            <div class="boldlet">c 에브리타임</div>
+        </div>
+        <div class="extrainfo">
+            <div>직업정보제공사업 신고번호 : J1204020230008</div>
+        </div>
+    </footer>
 
 </body>
 
