--- a/everytime/main.html
+++ b/everytime/main.html
@@ -182,7 +182,7 @@
                                 <option value="3">글 제목</option>
                                 <option value="4">글 내용</option>
                             </select>
-                            <input type="text" name="search_keyword" value="검색어를 입력하세요.">
+                            <input type="text" name="search_keyword" placeholder="검색어를 입력하세요.">
                         </form>
                         <img src="img/돋보기.png" alt="돋보기" width="25" height="25">
                     </div>
