[0404] 에브리타임 2

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -9,19 +9,19 @@
 </head>
 
 <body>
-    <nav class="setting">
+    <nav class="setting" id="top">
         <ul>
             <li><a href="">Portal Login<br><span class="korean">(재학생, 재직자)</span></a></li>
             <li><a href="">Library Login<br><span class="korean">(졸업생, 외래강사)</span></a></li>
             <li><a href="">Help Desk</a></li>
             <li class="DS_homepage"><a href="">
                     <img src="img/duksung_symbol.png" alt="덕성여자대학교 로고" width="24" height="22">
-                    덕성여자대학교
+                    <span>덕성여자대학교</span>
                 </a></li>
             <li><a href="">English</a></li>
             <li class="full_menu"><a href="">
                     <img src="img/tm-all.png" width="18" height="16">
-                    전체메뉴
+                    <span>전체메뉴</span>
                 </a></li>
         </ul>
     </nav>
@@ -155,6 +155,12 @@
             <a href=""><img src="img/banner.png" width="570" height="430"></a>
         </div>
     </section>
+    <footer class="copyright">
+        <p>Copyright(c) 2015 Duksung Women's University Library.All rights Reserved</p>
+    </footer>
+    <div class="top_button">
+        <a href="#top"><img src="img/ds-static-top.png" alt="맨 위로" width="60"></a>
+    </div>
 </body>
 
 </html>
