[4.4] 학교 도서관 수정

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -30,31 +30,31 @@
     </div>
     <!--section2-->
     <div class="section">
-      <div class="one">
+      <div class="menu_one">
         <img src="./img/main-q1.png" alt="사진 로딩 중" />
         <p>대출/연장/예약</p>
       </div>
-      <div class="two">
+      <div class="menu_two">
         <img src="./img/main-q2.png" alt="사진 로딩 중" />
         <p>서비스신청 현황</p>
       </div>
-      <div class="three">
+      <div class="menu_three">
         <img src="./img/main-q3.png" alt="사진 로딩 중" />
         <p>자료구입신청</p>
       </div>
-      <div class="four">
+      <div class="menu_four">
         <img src="./img/main-q5.png" alt="사진 로딩 중" />
         <p>원본복사신청</p>
       </div>
-      <div class="five">
+      <div class="menu_five">
         <img src="./img/main-q6.png" alt="사진 로딩 중" />
         <p>모바일이용증</p>
       </div>
-      <div class="six">
+      <div class="menu_six">
         <img src="./img/main-q7.png" alt="사진 로딩 중" />
         <p>도서관이용안내</p>
       </div>
-      <div class="seven">
+      <div class="menu_seven">
         <img src="./img/main-q9.png" alt="사진 로딩 중" />
         <p>PLAy N Create</p>
       </div>
@@ -78,7 +78,7 @@
           >
         </p>
         <img class="no" src="./img/board-more.png" alt="사진 로딩 중" />
-        <div class="line_first">
+        <div class="line_first" style="border-top: 5px solid black">
           <p>
             제60회 도서관 주간 기념 영화자료 전시 '영화로 만나는 미래' |
             4/1~4/26
