--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/library.css">
     <title>덕성여자대학교 도서관</title>
 </head>
 
@@ -47,7 +47,7 @@
     </nav>
 
     <section>
-        <div class="search"><img src="./img/search section.png" width=100% height=260></div>
+        <div class="search"><img src="./img/search section.png" width=100% height=280></div>
     </section>
 
     <section>
@@ -92,15 +92,17 @@
         <section>
             <div class="anounwidth">
                 <div class="announce">
-                    <div class="notion">
-                        <div class="notion1">공지</div>
-                        <div class="notion2">사항</div>
-                        <div class="notion3">/ Notion</div>
-                    </div>
-                    <div class="culture">
-                        <div class="culture1">문화</div>
-                        <div class="culture2">기획</div>
-                        <div class="culture3">/ Culture</div>
+                    <div class="announce1">
+                        <div class="notion">
+                            <div class="notion1">공지</div>
+                            <div class="notion2">사항</div>
+                            <div class="notion3">/ Notion</div>
+                        </div>
+                        <div class="culture">
+                            <div class="culture1">문화</div>
+                            <div class="culture2">기획</div>
+                            <div class="culture3">/ Culture</div>
+                        </div>
                     </div>
                     <div class="plus">+</div>
                 </div>
