--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -25,7 +25,7 @@
 
     <div class="main">
         <div class="main-img">
-            <img src ="library_img/main-img3.png" width="1440px">
+            <img src ="library_img/main-img3.png">
         </div>
         <div class="main-menu">
             <div class="item">
