[0411] 에브리타임3

--- a/everytime/detail.html
+++ b/everytime/detail.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./img/logo.png" />
     <title>에브리타임</title>
-    <!--<link rel="stylesheet" href="./css/main.css" />-->
     <link rel="stylesheet" href="./css/detail.css" />
   </head>
 
@@ -237,8 +236,9 @@
       </div>
     </div>
     <br />
-    <!-- 3. 컨테이너1- 본문 -->
+    <!-- 3. 본문 -->
     <div id="container" class="article">
+      <!-- 3-1. 본문1- 중앙 본문 -->
       <div class="wrap title">
         <h1><a href="/255745">비밀게시판</a></h1>
       </div>
@@ -347,7 +347,7 @@
         </div>
       </div>
 
-      <!-- 4. 컨테이너2 - 좌측메뉴 -->
+      <!-- 3-2. 본문2 - 우측메뉴 -->
       <div class="rightside">
         <div class="card">
           <div class="board">
@@ -447,7 +447,7 @@
         </div>
       </div>
     </div>
-    <!-- 5. footer -->
+    <!-- 4. footer -->
     <div id="bottom">
       <ul class="links">
         <br />
