[04/12] 에브리타임 3

--- a/everytime/main.html
+++ b/everytime/main.html
@@ -9,7 +9,7 @@
 
   <body>
     <section class="all">
-      <section class="nav">
+      <nav>
         <div class="nav_menu">
           <div class="logo_left">
             <img class="logo_img" src="img/everytime_img/nav.logo.png"  alt="에타로고">
@@ -126,7 +126,7 @@
           </div>
           
         </div>
-      </section>
+      </nav>
 
       <section class="main">
         <div class="main_left">
