[0416] 에브리타임 3

--- a/everytime/login.html
+++ b/everytime/login.html
@@ -12,11 +12,11 @@
     <div>
       <img src="img/logo.png">
     </div>
-  
     <form>
-      <input type="text" value=""><br>
-      <input type="password" value=""><br>
-      <button type="button">에브리타임 로그인</button>
+    
+      <input type="text" placeholder="아이디" class="idBox"><br>
+      <input type="password" placeholder="비밀번호" class="idBox"><br>
+      <input type="submit" value="에브리타임 로그인" class="idBox" style="padding:1px 2px; width:404px; height:37px">
     </form>
   
     <p><a href="#">회원가입</a></p>
