--- a/everytime/login.html
+++ b/everytime/login.html
@@ -17,23 +17,37 @@
     <img src="img/logo.png" width="200" height="50">
     </div>
 
+    <div class="forcenter">
+        <div class="middleboxall">
+            <div class="idboxall">
+                <input type="text" class="idbox">
 
-    <div class="middleboxall">
-        <div class="idboxall">
-            <input type="text" class="idbox">
-
-            <input type="password" class="idbox">
-        </div>
+                <input type="password" class="idbox">
+            </div>
 
 
-        <div class="redbox">
-            <div class="loginkor">
-                <input type="submit" value="에브리타임 로그인">
+            <div class="redbox">
+                <div class="loginkor">
+                    <input type="submit" value="에브리타임 로그인" style="
+                    background: rgb(222, 55, 55);
+                    height: 35px;
+                    width: 280px;
+                    border-radius: 10px;
+                    border: 2px solid rgb(222, 55, 55);
+                    /* margin-top: 5px; */
+                    color: white;
+                ">
+                </div>
             </div>
         </div>
     </div>
 
+
+
     <div class="bottomall">
+        <div>
+
+        
         <div class="bottom1">
         <ins>회원가입</ins>
         </div>
@@ -43,7 +57,7 @@
         <b>&nbsp;개인정보처리방침</b>
         &nbsp;문의하기&nbsp;
         <b>&copy;&nbsp;에브리타임</b>
-        </div>
+        </div></div>
     </div>
 </div>
 </form>
