--- a/everytime/signup.html
+++ b/everytime/signup.html
@@ -9,17 +9,19 @@
 
 
 <body>
-<form>
+<form method="post">
     <div class="all">
         <div class="top">
-            <div class="top1">
-            에브리타임 회원가입
-            </div>
+            <div class="top_box">
+                <div class="top1">
+                에브리타임 회원가입
+                </div>
 
-            <div class="top2">
-            에브리타임 계정으로 <span style=color:black><b>캠퍼스픽, 에브리타임</b></span> 등<br>
-            다양한 대학생 서비스를 모두 이용하실 수 있습니다.
-            </div>
+                <div class="top2">
+                에브리타임 계정으로 <span style=color:black><b>캠퍼스픽, 에브리타임</b></span> 등<br>
+                다양한 대학생 서비스를 모두 이용하실 수 있습니다.
+                </div>  
+            </div> 
         </div>
 
         <div class="middleall">
@@ -28,9 +30,9 @@
                 이름   
                 </div>
 
-                <div class="namebox">
+                <div class="#">
                     <div class="nameboxtext">
-                        <input type="text" placeholder="이름을 입력하세요.">
+                        <input type="text" class="namebox" placeholder="이름을 입력하세요.">
                     </div>
                 </div>
             </div>
@@ -40,9 +42,9 @@
                 닉네임  
                 </div>
 
-                <div class="namebox">
+                <div class="#">
                     <div class="nameboxtext">
-                        <input type="text" placeholder="닉네임을 입력하세요.">
+                        <input type="text" class="namebox" placeholder="닉네임을 입력하세요.">
                     </div>
                 </div>
             </div>
@@ -52,9 +54,9 @@
                 이메일  
                 </div>
 
-                <div class="namebox">
+                <div class="#">
                     <div class="nameboxtext">
-                        <input type="email" placeholder="이메일을 입력하세요.">
+                        <input type="email" class="namebox" placeholder="이메일을 입력하세요.">
                     </div>
                 </div>
             </div>
@@ -64,9 +66,9 @@
                 비밀번호   
                 </div>
 
-                <div class="namebox">
+                <div class="#">
                     <div class="nameboxtext">
-                        <input type="password" placeholder="숫자/문자 조합, 최소 8자 이상">
+                        <input type="password" class="namebox" placeholder="숫자/문자 조합, 최소 8자 이상">
                     </div>
                 </div>
             </div>
@@ -76,18 +78,18 @@
                 비밀번호 재입력  
                 </div>
 
-                <div class="namebox">
+                <div class="#">
                     <div class="nameboxtext">
-                        <input type="password" placeholder="비밀번호를 재입력하세요.">
+                        <input type="password" class="namebox" placeholder="비밀번호를 재입력하세요.">
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="bottom">
-            <div class="redbox">
+            <div class="#">
                 <div class="joinkor">
-                    <input type="submit" value="회원가입">
+                    <input type="submit" class="redbox" value="회원가입">
                 </div>
             </div>
         </div>
