[0417] 에브리타임 3

--- a/everytime/post.html
+++ b/everytime/post.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>에브리타임 post</title>
+    <title>에브리타임 글 작성</title>
     <link rel="stylesheet" href="css/post.css" />
   </head>
   <body>
