--- a/everytime/main.html
+++ b/everytime/main.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>에브리타임</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>에브리타임 메인</title>
+    <link rel="stylesheet" href="css/main.css" />
   </head>
 
   <body>
