[04.30] 도서관 반응형

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -18,15 +18,21 @@
       <span>게시판</span>
       <span>Help Desk</span>
       <span>My Library</span>
+      <div class="ham_btn">
+        <img class="ham_btn_tm" src="./img/tm-all.png" alt="사진 로딩 중" />
+        <img class="ham_btn_ds" src="./img/ds-btn-my.jpg" alt="사진 로딩 중" />
+      </div>
     </div>
     <!--section1-->
     <div class="searchbar">
       <img class="search" src="./img/main-img3.jpg" alt="사진 로딩 중" />
-      <img
-        class="searchbarimg"
-        src="./img/searchbarimg.png"
-        alt="사진 로딩 중"
-      />
+      <div class="search_img">
+        <img
+          class="searchbarimg"
+          src="./img/searchbarimg.png"
+          alt="사진 로딩 중"
+        />
+      </div>
     </div>
     <!--section2-->
     <div class="section">
