--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -9,16 +9,18 @@
   <body>
     <header>
       <div class="top_bar">
-        <div class="PL">Potal Login<br /><span>(재학생,재직자)</span></div>
-        <div class="LL">Library Login<br /><span>(졸업생,외래강사)</span></div>
-        <div class="HD">Help Desk</div>
-        <div class="home">
-          <img alt="덕성여대로고" src="img/tm-ds-icon.jpg" />덕성여자대학교
-        </div>
-        <div class="EN">English</div>
-        <div class="TM">
-          <img alt="햄버거바" src="img/tm-all.png" />전체메뉴
-        </div>
+        <ul>
+          <li class="PL">Potal Login<br /><span>(재학생,재직자)</span></li>
+          <li class="LL">Library Login<br /><span>(졸업생,외래강사)</span></li>
+          <li class="HD">Help Desk</li>
+          <li class="home">
+            <img alt="덕성여대로고" src="img/tm-ds-icon.jpg" />덕성여자대학교
+          </li>
+          <li class="EN">English</li>
+          <li class="TM">
+            <img alt="햄버거바" src="img/tm-all.png" />전체메뉴
+          </li>
+        </ul>
       </div>
       <div class="main_bar">
         <img alt="학교도서관로고" src="img/ds-logo.jpg" />
@@ -141,45 +143,56 @@
               </ul> -->
             </li>
           </ul>
+          <ul class="high_hidden">
+            <li>
+              <img alt="햄버거바" src="img/tm-all.png" />
+            </li>
+            <li>
+              <img alt="사람아이콘" src="img/ds-btn-my.jpg" />
+            </li>
         </nav>
       </div>
     </header>
     <section>
-      <section class="serch">
-        <img alt="검색부분사진" src="img/main-img3.jpg" />
-      </section>
+      <div class="serch">
+        <img alt="검색창" src="img/serch_box.png" />
+      </div>
       <section class="center_bar">
         <ul>
-          <li>
+          <li id="L1">
             <img alt="대출/연장/예약" src="img/main-q1.png" />대출/연장/예약
           </li>
-          <li>
+          <li id="L2">
             <img alt="서비스신청 현황" src="img/main-q2.png" />서비스신청 현황
           </li>
-          <li><img alt="자료구입신청" src="img/main-q3.png" />자료구입신청</li>
-          <li><img alt="원문복사신청" src="img/main-q5.png" />원문복사신청</li>
-          <li><img alt="모바일이용증" src="img/main-q6.png" />모바일이용증</li>
-          <li>
+          <li id="L3"><img alt="자료구입신청" src="img/main-q3.png" />자료구입신청</li>
+          <li id="L4"><img alt="원문복사신청" src="img/main-q5.png" />원문복사신청</li>
+          <li id="L5"><img alt="모바일이용증" src="img/main-q6.png" />모바일이용증</li>
+          <li id="L6">
             <img alt="도서관이용안내" src="img/main-q7.png" />도서관이용안내
           </li>
-          <li>
-            <img alt="PLAy N Create" src="img/main-q8.png" />PLAy N Create
+          <li id="L7">
+            <img alt="PLAy N Create" src="img/main-q9.png" />PLAy N Create
           </li>
-          <li><img alt="스터디룸예약" src="img/main-q9.png" />스터디룸예약</li>
+          <li id="L8"><img alt="스터디룸예약" src="img/main-q8.png" />스터디룸예약</li>
         </ul>
       </section>
       <section class="information">
         <div class="list">
           <div class="title">
-            <div class="notice">
-              <div class="ko"><span id="pink">공지</span>사항</div>
-              <div class="en">/ Notice</div>
+            <div class="title_text">
+              <div class="notice">
+                <div class="ko"><span id="pink">공지</span>사항</div>
+                <div class="en">/ Notice</div>
+              </div>
+              <div id="culture">
+                <div class="ko"><span>문화</span>기획</div>
+                <div class="en">/ Culture</div>
+              </div>
             </div>
-            <div id="culture">
-              <div class="ko"><span>문화</span>기획</div>
-              <div class="en">/ Culture</div>
+            <div>
+              <img alt="더보기" src="img/board-more.png" />
             </div>
-            <img alt="더보기" src="img/board-more.png" />
           </div>
           <div class="text">
             <ul>
